Generics_Super_Extend_WildCard/Code8_error_report.txt
javac errors for Code8.java 
Code8.java:11: error: no suitable method found for add(T)
        src.add(dst.get(0));
           ^
    method Collection.add(CAP#1) is not applicable
      (argument mismatch; T cannot be converted to CAP#1)
    method List.add(CAP#1) is not applicable
      (argument mismatch; T cannot be converted to CAP#1)
  where T is a type-variable:
    T extends Object declared in method <T>copyUpperBound(List<T>,List<? extends T>)
  where CAP#1 is a fresh type-variable:
    CAP#1 extends T from capture of ? extends T
Code8.java:15: error: incompatible types: CAP#1 cannot be converted to T
        T element = dst.get(0); 
                           ^
  where T is a type-variable:
    T extends Object declared in method <T>copyLowerBound(List<? super T>,List<T>)
  where CAP#1 is a fresh type-variable:
    CAP#1 extends Object super: T from capture of ? super T
Code8.java:21: error: incompatible types: CAP#1 cannot be converted to T
        T element = dst.get(0);
                           ^
  where T is a type-variable:
    T extends Object declared in method <T>copyBounded(List<? super T>,List<? extends T>)
  where CAP#1 is a fresh type-variable:
    CAP#1 extends Object super: T from capture of ? super T
Code8.java:28: error: method copy in class Code8 cannot be applied to given types;
        copy(integers, strings);
        ^
  required: List<T>,List<T>
  found: List<Integer>,List<String>
  reason: inferred type does not conform to equality constraint(s)
    inferred: String
    equality constraints(s): String,Integer
  where T is a type-variable:
    T extends Object declared in method <T>copy(List<T>,List<T>)
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
4 errors
 
============================================================================= 
ExtendJ errors for Code8.java 
C:\Users\Abeer Faiz Farid\Desktop\MSc Software Engineering\Semester 3\JavaTypeErrorBenchmarks\Generics_Super_Extend_WildCard\Code8.java:11: error: no method named add(T) in java.util.List<? extends T> matches. However, there is a method add(wildcards.? extends T)
C:\Users\Abeer Faiz Farid\Desktop\MSc Software Engineering\Semester 3\JavaTypeErrorBenchmarks\Generics_Super_Extend_WildCard\Code8.java:28: error: no method named copy(java.util.List<java.lang.Integer>, java.util.List<java.lang.String>) in Code8 matches. However, there is a method copy(java.util.List<T>, java.util.List<T>)
 
============================================================================= 
Eclipse ECJ errors for Code8.java 
----------
1. ERROR in C:\Users\Abeer Faiz Farid\Desktop\MSc Software Engineering\Semester 3\JavaTypeErrorBenchmarks\Generics_Super_Extend_WildCard\Code8.java (at line 11)
	src.add(dst.get(0));
	    ^^^
The method add(capture#1-of ? extends T) in the type List<capture#1-of ? extends T> is not applicable for the arguments (T)
----------
2. ERROR in C:\Users\Abeer Faiz Farid\Desktop\MSc Software Engineering\Semester 3\JavaTypeErrorBenchmarks\Generics_Super_Extend_WildCard\Code8.java (at line 15)
	T element = dst.get(0); 
	            ^^^^^^^^^^
Type mismatch: cannot convert from capture#2-of ? super T to T
----------
3. ERROR in C:\Users\Abeer Faiz Farid\Desktop\MSc Software Engineering\Semester 3\JavaTypeErrorBenchmarks\Generics_Super_Extend_WildCard\Code8.java (at line 21)
	T element = dst.get(0);
	            ^^^^^^^^^^
Type mismatch: cannot convert from capture#5-of ? super T to T
----------
4. ERROR in C:\Users\Abeer Faiz Farid\Desktop\MSc Software Engineering\Semester 3\JavaTypeErrorBenchmarks\Generics_Super_Extend_WildCard\Code8.java (at line 28)
	copy(integers, strings);
	^^^^
The method copy(List<T>, List<T>) in the type Code8 is not applicable for the arguments (List<Integer>, List<String>)
----------
4 problems (4 errors)
